<resources>
    <string name="app_name">Aula0</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="texto_botao_mostrar">Mostrar</string>
    <string name="msg_alert">Conteúdo da mensagem</string>
    <string name="toast_cancelar">Botão cancelar acionado</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="botao_fechar">Fechar</string>
    <string name="celular">imagem no celular</string>
    <string name="valorpontuacao">0.0</string>
    <string name="hint_nome">Digite seu nome</string>
    <string name="botao_apresentar_nome">Apresentar nome</string>
    <string name="checkbox_lembrar">Lembrar senha </string>
    <string name="radioburron_opt1">Opção 1</string>
    <string name="radioburron_opt2">Opção 2</string>
    <string name="botao_excluir">Excluir</string>
</resources>