<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="154dp"
        android:layout_height="88dp"
        android:layout_margin="10dp"
        android:text="@string/title_activity_main2"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="220dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="83dp"
        android:layout_margin="10dp"
        android:text="@string/title_activity_main2"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="220dp" />


    <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnFechar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:text="@string/botao_fechar"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="325dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnFechar1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="64dp"
            android:layout_margin="10dp"
            android:text="@string/botao_fechar"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="325dp" />
    </LinearLayout>
    
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"/>

        <ProgressBar
            android:layout_gravity="center"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <FrameLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorpontuacao"
            android:layout_marginEnd="30dp" />
    </FrameLayout>


</LinearLayout>